--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@mailchimp/mailchimp_marketing": "^3.0.29",
         "body-parser": "^1.19.0",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "nodemon": "^2.0.7"
     }
